[package]
name = "kv"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
anyhow = "1"                                                     # 错误处理
bytes = "1"                                                      # 高效处理网络 buffer 的库
dashmap = "5.5.3"                                                # 并发 HashMap
http = "1.1.0"                                                   # 我们使用 HTTP status code 所以引入这个类型库
prost = "0.12.6"                                                 # 处理 protobuf 的代码
thiserror = "1"                                                  # 错误定义和处理
tracing = "0.1"                                                  # 日志处理
sled = "0.34"                                                    # sled db
flate2 = "1"                                                     # gzip压缩
tokio = { version = "1", features = ["full"] }                   # 异步网络库
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
tracing-subscriber = "0.3"                                       # 日志处理

[dev-dependencies]
futures = "0.3"                                        # 提供 Stream trait
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3"

[build-dependencies]
prost-build = "0.12.6" # 编译 protobuf
